--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:mysql://localhost:3306/@{DB_Name}
+spring.datasource.url=jdbc:mysql://localhost:3306/faite_assessment
 spring.datasource.username=root
-spring.datasource.password=${password}
+spring.datasource.password=thajee2002
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
