--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=thajee2002
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+stripe.secret.key=sk_test_xxxxx
