--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=thajee2002
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-stripe.secret.key=sk_test_xxxxx
+
+spring.servlet.multipart.enabled=true
