--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,18 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:mysql://localhost:3306/faite_assessment
-spring.datasource.username=root
-spring.datasource.password=thajee2002
+
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
 spring.servlet.multipart.enabled=true
 
-
+# Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=vasanththajeevan@gmail.com
-spring.mail.password=dqccklxcyzcstytd
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
